[metadata]
name = amdnvtool
version = 0.1
author = Christian Werling, Niklas Jacob
author_email = cwerling@posteo.de, hnj@posteo.de
url = https://github.com/PSPReverse/amd-nv-tool
description = amd-nv-tool can extract and modify information from BIOS images of AMD systems

classifiers= Development Status :: 4 - Beta
             Intended Audience :: Science/Research
             Topic :: Security
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python :: 3.8

[options]
packages = amdnvtool
install_requires = cryptography

[options.entry_points]
console_scripts = amdnvtool = amdnvtool.__main__:main
